--- a/index.html
+++ b/index.html
@@ -1,18 +1,38 @@
 <html>
-<head>
-  <title>Practace</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/styles.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script src="build/js/vendor.min.js"></script>
-  <script src="build/js/app.js"></script>
-</head>
-<body>
-  <div class="container">
+  <head>
+    <title>Start</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="build/js/vendor.min.js"></script>
+    <link rel="stylesheet" href="build/css/vendor.css">
+    <!-- 1. Load libraries -->
+    <!-- IE required polyfills, in this exact order -->
+    <script src="node_modules/systemjs/dist/system-polyfills.js"></script>
+    <script src="node_modules/es6-shim/es6-shim.min.js"></script>
+    <script src="node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
 
+    <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
+    <script src="node_modules/systemjs/dist/system.src.js"></script>
+    <script src="node_modules/rxjs/bundles/Rx.js"></script>
+    <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
 
+    <link rel="stylesheet" href="build/css/styles.css">
+  </head>
 
-
-</body>
+  <!-- 3. Display the application -->
+  <body>
+    <my-app>Loading...</my-app>
+  </body>
+  <!-- 2. Configure SystemJS -->
+  <script>
+    System.config({
+      packages: {
+        app: {
+          format: 'register',
+          defaultExtension: 'js'
+        }
+      }
+    });
+    System.import('app/main')
+          .then(null, console.error.bind(console));
+  </script>
 </html>
